--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.77.8"
   },
   "devDependencies": {
