--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^3.5.0",
     "sass": "^1.77.8"
   },
   "devDependencies": {
