--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
+    "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^3.5.0",
     "sass": "^1.77.8"
