--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^3.5.0",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
